frontend init + fix
