# backend/internal/handler/miner.go
@@ -5,13 +5,12 @@ import (
 	"net/http"
 	"strconv"
 
-	"github.com/ethereum/go-ethereum/common"
 	"github.com/gorilla/mux"
 )
 
 func (h *handler) handleGetMinerWithStats(w http.ResponseWriter, r *http.Request) {
-	addressStr := mux.Vars(r)["address"]
-	if addressStr == "" {
+	address := mux.Vars(r)["address"]
+	if address == "" {
 		sendResponse(w, http.StatusBadRequest, models.ErrorResponse{
 			Code:    http.StatusBadRequest,
 			Message: "",
@@ -19,7 +18,6 @@ func (h *handler) handleGetMinerWithStats(w http.ResponseWriter, r *http.Request
 		return
 	}
 
-	address := common.HexToAddress(addressStr)
 	miner, e := h.service.GetMinerWithStatsByAddress(r.Context(), address)
 	if e != nil {
 		sendResponse(w, e.Code, e)
@@ -65,4 +63,33 @@ func (h *handler) handlerGetMiners(w http.ResponseWriter, r *http.Request) {
 	}
 
 	sendResponse(w, 200, miners)
+}
+
+func (h *handler) handleGetAccount(w http.ResponseWriter, r *http.Request) {
+	address := mux.Vars(r)["address"]
+	if address == "" {
+		sendResponse(w, http.StatusBadRequest, models.ErrorResponse{
+			Code:    http.StatusBadRequest,
+			Message: "",
+		})
+		return
+	}
+
+	miner, e := h.service.GetAccount(r.Context(), address)
+	if e != nil {
+		sendResponse(w, e.Code, e)
+		return
+	}
+
+	sendResponse(w, 200, miner)
+}
+
+func (h *handler) handleMinersWithdraw(w http.ResponseWriter, r *http.Request) {
+	sendResponse(w, 200, models.Deal{
+		DealID:     69,
+		GiverValue: "123",
+		ID:         420,
+		MinerValue: "1337",
+		Status:     "1338",
+	})
 }
